--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,11 @@ section_id: contact
       <div class='medium-4 columns'>
         <div class='contact-details'>
           <h4>Our location:</h4>
-          <p>41 Dean Street, London, UK</p>
+          <p>{{ site.contacts.location }}</p>
           <h4>Our Phone:</h4>
-          <p>+86 (03) 9810 4612</p>
-          <h4>Fax:</h4>
-          <p>+6102 236338 5456</p>
+          <p>{{ site.contacts.phone }}</p>
           <h4>Our Email:</h4>
-          <p>info@devoll-team.com</p>
+          <p>{{ site.contacts.email }}</p>
         </div>
       </div>
     </div>
