--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Portfolio
-section_id: portfolio
+title: Real Estate
+section_id: Portfolio
 works:
   - image: images/@stock/work-1.jpg
     title: Beautiful Girl
