taught jake how to make commits and jekyll install

--- a/services.html
+++ b/services.html
@@ -3,9 +3,9 @@ layout: default
 title: Services
 section_id: services
 services_left:
-  - icon: trophy
-    title: Web Design
-    desc: Acusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.
+  - icon: db-shape
+    title: Eating Pussy
+    desc: It should be pretty clear that Jake is a pro at going down ;)
   - icon: cogs
     title: Web Development
     desc: Acusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.
@@ -30,42 +30,51 @@ services_right:
     desc: Acusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.
 ---
 
-<div class='full parallax' style='background-image: url(images/@stock/service-page-header.jpg); color: #fff;'>
-  <div class='row'>
-    <div class='large-12 columns'>
-      {% include section-header.html title="Our services" tagline="Get to know what we do" color="#fff" class="big" %}
+<div
+  class="full parallax"
+  style="background-image: url(images/@stock/service-page-header.jpg); color: #fff;"
+>
+  <div class="row">
+    <div class="large-12 columns">
+      {% include section-header.html title="Our services" tagline="Get to know
+      what we do" color="#fff" class="big" %}
     </div>
   </div>
-  <div class='four spacing'></div>
+  <div class="four spacing"></div>
 </div>
 
-
-<div class='full'>
-  <div class='row'>
-    <div class='medium-6 columns'>
+<div class="full">
+  <div class="row">
+    <div class="medium-6 columns">
       {% for service in page.services_left %}
-        <div class='fadein mod modIconText' data-delay='{{ 300 | times:forloop.index0 }}'>
-          <div class='icon-text-simple'>
-            <i class='fa fa-{{service.icon}}'></i>
-            <h3>{{service.title}}</h3>
-            <p>{{service.desc}}</p>
-          </div>
-          <div class='two spacing'></div>
+      <div
+        class="fadein mod modIconText"
+        data-delay="{{ 300 | times: forloop.index0 }}"
+      >
+        <div class="icon-text-simple">
+          <i class="fa fa-{{ service.icon }}"></i>
+          <h3>{{ service.title }}</h3>
+          <p>{{ service.desc }}</p>
         </div>
+        <div class="two spacing"></div>
+      </div>
       {% endfor %}
     </div>
-    <div class='medium-6 columns'>
+    <div class="medium-6 columns">
       {% for service in page.services_right %}
-        <div class='fadein mod modIconText' data-delay='{{ 300 | times:forloop.index0 }}'>
-          <div class='icon-text-simple'>
-            <i class='fa fa-{{service.icon}}'></i>
-            <h3>{{service.title}}</h3>
-            <p>{{service.desc}}</p>
-          </div>
-          <div class='two spacing'></div>
+      <div
+        class="fadein mod modIconText"
+        data-delay="{{ 300 | times: forloop.index0 }}"
+      >
+        <div class="icon-text-simple">
+          <i class="fa fa-{{ service.icon }}"></i>
+          <h3>{{ service.title }}</h3>
+          <p>{{ service.desc }}</p>
         </div>
+        <div class="two spacing"></div>
+      </div>
       {% endfor %}
     </div>
   </div>
-  <div class='spacing'></div>
+  <div class="spacing"></div>
 </div>
