tweak a few files, make some logs, make things look nice

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ slides:
   - bg: images/@stock/slide-1.jpg
     small_title:
       klass: bottom-to-top
-      text: The perfect theme for buttstuff
+      text: Financial Independence and Personal Success
     title:
       klass: bottom-to-top
-      text: Many purposes
+      text: The Jake Volin Podcast
     buttons:
       klass: bottom-to-top
       items:
@@ -18,10 +18,10 @@ slides:
     klass: centered-text
     small_title:
       klass: bottom-to-top
-      text: We make websites that are
+      text: Skydiving Champions 2018
     title:
       klass: bottom-to-top
-      text: Creative &amp; Powerful
+      text: Fall Fast &amp; Smile
     buttons:
       klass: bottom-to-top
       items:
@@ -33,10 +33,10 @@ slides:
   - bg: images/@stock/slide-5.jpg
     small_title:
       klass: bottom-to-top
-      text: This is a creative theme that you'll
+      text: Creative Top Text
     title:
       klass: bottom-to-top
-      text: definitely love...
+      text: and creative bottom text
     buttons:
       klass: bottom-to-top
       items:
@@ -176,23 +176,23 @@ milestones:
 
 <div class="row">
   <div class="medium-3 large-3 columns">
-    {% include icon-text.html title='Creative design' desc='Est aperiam ex sint
+    {% include icon-text.html title='Creative design' desc='Alpha Est aperiam ex sint
     maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.'
     icon_class='fa fa-flask' delay='0' shape_class='icon-text-circle' %}
   </div>
   <div class="medium-3 large-3 columns">
-    {% include icon-text.html title='Creative design' desc='Est aperiam ex sint
+    {% include icon-text.html title='Independent Thinking' desc='Delta Est aperiam ex sint
     maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.'
     icon_class='fa fa-paper-plane-o' delay='200' shape_class='icon-text-circle'
     %}
   </div>
   <div class="medium-3 large-3 columns">
-    {% include icon-text.html title='Creative design' desc='Est aperiam ex sint
+    {% include icon-text.html title='Customized Success' desc='Beta Est aperiam ex sint
     maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.'
     icon_class='fa fa-tablet' delay='400' shape_class='icon-text-circle' %}
   </div>
   <div class="medium-3 large-3 columns">
-    {% include icon-text.html title='Creative design' desc='Est aperiam ex sint
+    {% include icon-text.html title='Fail Fast' desc='Gamma Est aperiam ex sint
     maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.'
     icon_class='fa fa-comments-o' delay='600' shape_class='icon-text-circle' %}
   </div>
@@ -433,7 +433,7 @@ milestones:
       <div class="medium-3 large-3 columns">
         <a
           class="button"
-          href="http://themeforest.net/user/honryou/portfolio?ref=honryou"
+          href="https://untra.io"
           >Learn more</a
         >
       </div>
